# huawei-utool

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bk  README.md  TODO.md  build-third-party.bash  build-with-msys2.md
include/: command-helps.h  command-interfaces.h  commons.h  constants.h  log.h  redfish.h  string_utils.h  typedefs.h  url_parser.h  utool.h
src/: command-helper.c  commons.c  ipmi.c  log.c  main-debug.c  main.c  redfish.c  string_utils.c  url_parser.c  utool.c
src/commands/: add_user.c  clear_sel.c  collect_log.c  del_user.c  del_vnc_sessions.c  download_bmc_file.c  export_bmc_cfg.c  firmware.c  get_bios_result.c  get_bios_settings.c  get_bmc_ip.c  get_capabilities.c  get_cpu.c  get_event_log.c  get_event_log_bak.c  get_event_subscriptions.c  get_fan.c  get_firmware.c  get_health.c  get_health_event.c  get_ipmi_whitelist.c  get_ldisk.c  get_memory.c  get_mgmt_port.c  get_nic.c  get_overall_power_status.c  get_pcie.c  get_pdisk.c  get_pending_bios_settings.c  get_power_capping.c  get_product.c  get_psu.c  get_raid.c  get_sensor.c  get_services.c  get_snmp.c  get_system_boot.c  get_tasks.c  get_temp.c  get_time.c  (+32 more)
src/include/: command-helps.h  command-interfaces.h  commons.h  constants.h  ipmi.h  log.h  redfish.h  string_utils.h  typedefs.h  url_parser.h  utool.h
src/patch/: argparse_patch
